--- a/templates/html_blank.html
+++ b/templates/html_blank.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-Hello World
+Hello World! I hate all of you! Have a nice day!
   <script src="js/scripts.js"></script>
 </body>
 </html>
